	  and data width are correct (2013-6-17).
	* arch/arm/src/kinetis/kinetis_tsi.h:  Corrections to the Kinetis
	  (2013-6-18)
	* arch/arm/src/sam34/sam_spi.c:  Fix SPI mode setting.  In the SAM3/4
	  family, the clock phase control (CPHA) is inverted (NPHA) (2013-6-18).
	* arch/arm/src/kl/chip/kl_tsi.h: Freescale KL25Z TSI register
	  definitions from Alan Carvalho de Assis (2013-6-18).
	* configs/freedom-kl25z/src/kl_tsi.c:  Example TSI driver for the
	  Freedom KL25Z board from Alan Carvalho de Assis (2013-6-18).
	* arch/arm/src/sam34/sam_spi.c:  Correct an incorrect pointer test.
	  Was checking if the wrong pointer was NULL (2013-6-18).
	* arch/arm/src/kl/kl_spi.c and chip/kl_spi.h:  Add SPI driver and
	  register definitions for the Freescale KL25Z (2013-6-19).
	* arm/src/sam34/chip/sam4l_lcdca.h:  Register definition file for
	  the SAM4L LCD peripheral (2013-6-19).
	* arm/src/sam34/chip/sam_spi.h:  SPI register definition file updated
	  to include a few differences for the SAM4L (2013-6-19)
	* arm/src/sam34/chip/sam4l_pdca.h: Add SAM4L PDCA register definition
	  file; also renamed sam_dmac.* files to sam3u_dmac.* to identify
	  them as SAM4U/4S only files (2013-6-19).
	* configs/freedom-lk25z/src/kl_spi.c:  Add the framework for
	  controlling SPI-related discrete inputs and outputs.  Taken from
	  work by Alan Carvalho de Assis (2013-6-20).
	* arch/arm/src/kl/kl_dumpgpio.c:  Now compiles (2013-6-20).
	* configs/:  Several defconfig files were changed that had 
	  CONFIG_HAVE_CXXINITIALIZE=y.  Because of recent changes to
	  apps/examples, these configurations may need to have
	  CONFIG_EXAMPLES_NSH_CXXINITIALIZE=y so that they behave as they did
	  before, i.e., so that C++ initializers will be called when NSH starts
	  up (2013-6-21).
	* configs/sam4l-xplained/src/sam_slcd.c:  Beginning of a driver for the
	  LED1 segment LCD module.  This driver is incomplete on initial check-
	  in (2013-6-21).